--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
   "name": "mmm-notif-custom-actions",
   "version": "1.0.0",
-  "description": "Do custom actions when catching broadcast notifications",
+  "description": "This is a MagicMirror² module designed to do the glue between modules or do simple js function.",
   "main": "MMM-NotifCustomActions.js",
   "author": "Sébastien Mazzon",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/seb-ma/MMM-NotifCustomActions"
+  },
+  "keywords": [
+    "magic-mirror-modules",
+    "magicmirror2"
+  ]
 }
