--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "git+https://github.com/seb-ma/MMM-NotifCustomActions"
   },
   "keywords": [
-    "magic-mirror-modules",
+    "magicmirror-module",
     "magicmirror2"
   ]
 }
